# erya

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: async.rs  image.rs  triangle.rs  window.rs
src/: camera.rs  id.rs  layer.rs  lib.rs  loader.rs  manager.rs  math.rs  mesh.rs  model.rs  queue.rs  rect.rs  renderer.rs  resource.rs  shader.rs  sprite.rs  texture.rs  timer.rs  transform.rs  utils.rs
src/shader/: sprite.frag  sprite.vert
src/shader/140/: default.frag
src/sprite/: mod.rs  sprite.frag  sprite.vert
